src/test/ui/span/move-closure.stderr
error[E0308]: mismatched types
  --> $DIR/move-closure.rs:5:17
   |
LL |     let x: () = move || ();
   |                 ^^^^^^^^^^ expected (), found closure
   |
   = note: expected type `()`
              found type `[closure@$DIR/move-closure.rs:5:17: 5:27]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
